# infraplan

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md
.github/workflows/: build.yaml  checks.yaml
examples/: deploy_ubuntu.yaml
infraplan/: Cargo.toml
infraplan/src/: main.rs
infraplan/src/plugins/: mod.rs
infraplan/src/plugins/pkgmgr/: apk.rs  apt.rs  dnf.rs  mod.rs  pacman.rs
infraplan/src/plugins/reboot/: kexec.rs  mod.rs
infraplan/src/plugins/sys_deploy/: mod.rs  tar.rs  utils.rs
infraplan/src/plugins/sys_deploy/utils/: fs.rs  mod.rs  postinst.rs
infraplan/src/plugins/sysconf/: apt_repo.rs  mod.rs  netplan.rs  user.rs
infraplan/src/utils/: chroot.rs  fstab.rs  mod.rs  parted.rs  parted_exe.rs  process.rs  syscall.rs
src/: main.rs
src/plugins/: mod.rs
src/plugins/package_manager/: mod.rs
src/plugins/pkgmgr/: mod.rs
src/plugins/reboot/: kexec.rs  mod.rs
src/plugins/sysconf/: apt_repo.rs  netplan.rs  user.rs
src/plugins/system_deployer/: mod.rs  tar.rs
src/plugins/system_reconfigurator/: apt_repo.rs  mod.rs  netplan.rs  user.rs
src/utils/: mod.rs  process.rs  syscall.rs
supply-chain/: audits.toml  config.toml
utils-sys/: Cargo.toml  build.rs
utils-sys/ffi_src/: utils.cpp  utils.hpp
