[package]
name = "infraplan"
version = "0.1.0"
edition = "2024"
authors = ["Koi to Coco<koitococo@outlook.com>"]

[dependencies]
clap = { version = "4.5.40", features = ["cargo", "derive"] }
env_logger = { version = "0.11.8", features = ["kv"] }
futures-util = "0.3.31"
libc = "0.2.174"
log = { version = "0.4.27", features = ["kv", "std"] }
nix = { version = "0.30.1", features = ["feature", "fs", "user"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
tokio-util = "0.7.15"
serde_yml = "0.0.12"
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["stream"] }
bytes = "1.10.1"
async-compression = { version = "0.4.25", features = [
  "bzip2",
  "gzip",
  "tokio",
  "xz",
  "zstd",
] }
astral-tokio-tar = { git = "https://github.com/koitococo/tokio-tar" }
